Fix breadcrumb alignment issue

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1208,7 +1208,7 @@ nav[aria-label='Docs sidebar']:hover {
 
 .blog-post-page {
   article {
-    padding-top: 25px;
+
   }
 }
 
